# ciencia-de-datos-curso

./: pyproject.toml  tarea_01_python_numpy.ipynb  trabajo.ipynb
Tareas/: tarea_02_python (1).ipynb  tarea_02_python.ipynb
Tareas/02_Pandas/: tarea_01_pandas_ingestion.ipynb  tarea_02_pandas_ingestion.ipynb
Tareas/04_EDA/: tarea_03_data_processing.ipynb
